Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -913,7 +913,21 @@
                         "Musics/I Love You_ I_m Sorry(MP3_160K).mp3",
                         "Musics/if u think i_m pretty(MP3_160K).mp3",
                         "Musics/Die For You(MP3_160K).mp3",
-                        "Musics/Coming Down(MP3_160K).mp3"
+                        "Musics/Coming Down(MP3_160K).mp3", 
+                        "Musics/Camila Cabello - Never Be the Same (Audio)(MP3_160K).mp3",
+                        "Musics/Chase Atlantic - FRIENDS (Official Lyric Video)(MP3_160K).mp3",
+                        "Musics/CLOVES - Don_t Forget About Me(MP3_160K).mp3",
+                        "Musics/Dark Red(MP3_160K).mp3",
+                        "Musics/Doja Cat - Freak (Official Audio)(MP3_160K).mp3",
+                        "Musics/Don Toliver - No Idea [Official Music Video](MP3_160K).mp3",
+                        "Musics/Him _ I(MP3_160K).mp3",
+                        "Musics/I_m Not The Only One(MP3_160K).mp3",
+                        "Musics/K(MP3_160K).mp3",
+                        "Musics/Lady Gaga_ Bradley Cooper - Shallow (from A Star Is Born) (Official           Music Video)(MP3_160K).mp3",
+                        "Musics/Maroon 5 - Maps (Audio)(MP3_160K).mp3",
+                        "Musics/Shut up My Moms Calling(MP3_160K).mp3",
+                        "Musics/Skank - Sutilmente (Clipe Oficial)(MP3_160K).mp3",
+                        "Musics/Video Games(MP3_160K).mp3"
                     ];
 
                     // Passo 1: Otimizar a busca por músicas existentes.
