--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
         </div>
 
         <div id="search-view" class="view pb-20">
-            <h1 class="text-3xl font-bold px-6 md:px-8 pt-6 md:pt-8 mb-4">Buscar</h1>
+            <h1 class="text-3xl font-bold px-6 md:px-8 pt-6 md:pt-8 mb-4">Catálogo</h1>
 
             <div class="sticky top-0 z-10 px-6 md:px-8 py-3" style="padding-top: calc(0.75rem + env(safe-area-inset-top));">
                 <div class="flex items-center gap-3">
@@ -310,7 +310,7 @@
     <nav class="fixed bottom-0 left-0 right-0 h-[64px] bg-zinc-900/50 backdrop-blur-lg flex justify-around items-center border-t border-zinc-800">
         <button data-view="search-view" class="nav-btn flex flex-col items-center justify-center w-full h-full gap-1 text-zinc-400 transition-colors">
             <i class="fas fa-search text-xl"></i>
-            <span class="text-xs">Buscar</span>
+            <span class="text-xs">Catálogo</span>
         </button>
         <button data-view="player-view" class="nav-btn flex flex-col items-center justify-center w-full h-full gap-1 text-green-500 transition-colors">
             <i class="fas fa-circle-play text-xl"></i>
