Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -938,7 +938,8 @@
                         "Musics/Maroon 5 - Maps (Audio)(MP3_160K).mp3",
                         "Musics/Shut up My Moms Calling(MP3_160K).mp3",
                         "Musics/Skank - Sutilmente (Clipe Oficial)(MP3_160K).mp3",
-                        "Musics/Video Games(MP3_160K).mp3"
+                        "Musics/Video Games(MP3_160K).mp3", 
+                        "Musics/Disillusioned(MP3_160K).mp3"
                     ];
 
                     const existingPaths = new Set(this.state.songs.map(song => song.path));
