--- a/index.html
+++ b/index.html
@@ -939,7 +939,8 @@
                         "Musics/Shut up My Moms Calling(MP3_160K).mp3",
                         "Musics/Skank - Sutilmente (Clipe Oficial)(MP3_160K).mp3",
                         "Musics/Video Games(MP3_160K).mp3", 
-                        "Musics/Disillusioned(MP3_160K).mp3"
+                        "Musics/Disillusioned(MP3_160K).mp3", 
+                        "Musics/Transform (feat. Charlotte Day Wilson)(MP3_160K).mp3"
                     ];
 
                     const existingPaths = new Set(this.state.songs.map(song => song.path));
