Atualizar o index.html1

--- a/index.html
+++ b/index.html
@@ -1571,7 +1571,7 @@
                 }
 
                 this.virtualScrollers[containerId] = VirtualScroller.create(containerId, {
-                    itemHeight: 64 + 4,
+                    itemHeight: 68,
                     buffer: 10,
                     data: songs,
                     renderItem: (song, index) => {
